syntax = "proto3";

option csharp_namespace = "UserService";

service GrpcUser {
    rpc GetUser(GetUserRequest) returns (UserGrpc) {}
}

message GetUserRequest {
    string id = 1;
}

message UserGrpc {
    string id = 1;

    string name = 2;

    string email = 3;

    string avatar = 4;

    bool isBan = 5;

    bool isAdmin = 6;
}